Changelog
=========

2019 12 19
----------

* BrachioGraph servo_1_zero/servo_2_zero attributes are now servo_1_centre/servo_2_centre
* Added arm_1_centre/arm_2_centre attributes to the BrachioGraph definition
* Added calibration methods and documentation
* Added bottom/top/left/right properties to BrachioGraph (bl, tl, tr, br)
* Created protractors for calibration


2019 12 26
----------

* Added hysteresis compensation with hysteresis_correction_1/hysteresis_correction_2 values
* Added calibration and anti-hysteresis documentation
* Added check for repeat controls in linedraw

2019 12 27
----------

* Added an exception for out-of-reach condition